--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "tailwind.config.js",
   "scripts": {
-     "React":
-      "useEffect",
-      "useState":
+    "React":
+    "useEffect",
+    "useState":
     "react-router-dom",
     "BrowserRouter as Router":
     "Routes",
@@ -18,5 +18,11 @@
     "getDocs":
     "tailwindcss/tailwind.css",
     "build":
-  }
+  },
+
+"keywords":["forum", "cool"],
+"author": "Mai Wang",
+"license": "ISC",
+"description": "Super Cool"
+    
 }
