--- a/package.json
+++ b/package.json
@@ -3,21 +3,18 @@
   "version": "1.0.0",
   "main": "tailwind.config.js",
   "scripts": {
-    "React": "useEffect",
-    "useState": "react-router-dom",
-    "BrowserRouter as Router": "Routes",
-    "Route": "Link",
-    "db": "firebase/firestore",
-    "collection": "addDoc",
-    "getDocs": "tailwindcss/tailwind.css",
-    "build": "react-scripts build"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "keywords": ["forum", "cool"],
   "author": "Mai Wang",
   "license": "ISC",
-  "description": "Super Cool"
-   "dependencies": {
+  "description": "Super Cool",
+  "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3"
+  }
 }
