--- a/package.json
+++ b/package.json
@@ -15,6 +15,13 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "tailwindcss": "^2.2.19",
+    "firebase": "^9.6.1",
+    "react-router-dom": "^5.3.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.2.6",
+    "postcss": "^8.3.5"
   }
 }
